--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=gestionDeAlumnos
 server.port=8082
+
+auth.service.url=http://localhost:8083/api
+alumnos.service.url=http://localhost:8083/api
